--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
+  background-color: #ffffff;
   color: #fff;
   position: relative;
   background: transparent;
@@ -19,7 +19,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #0b146b url("../img/b.jpg") top right no-repeat;
+  background: rgb(126, 197, 219, 255); url("../img/b.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -221,7 +221,7 @@ h6 {
   padding: 0;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
   white-space: nowrap;
   transition: 0.3s;
@@ -797,7 +797,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+    background: teal;
 }
 
 .portfolio #portfolio-flters li:last-child {
